ver 1.02 icons and update

--- a/about.html
+++ b/about.html
@@ -129,9 +129,9 @@
             <!-- project image -->
             <div class="image"></div>
             <!-- project description -->
-            <p>I recently graduated as a master's candidate at ITP, NYU. My passions are closely tied with computational media effects on society, education and religion.
+            <p>I recently graduated as a master's candidate at ITP, NYU. My passions are closely tied with computational media effects on society, education and religion. I love to translate perspectives to the users language; to move them and lit their dormant passions.
             <br><br>
-            I love programming languages and vector designs, and especially love to teach basic concepts of these fields to people. I have recently taught at Mongolia at Huree University in the Multimedia department. And am looking forward for more teaching opportunities.</p>
+            On the side, I love programming languages and vector designs, and especially love to teach students. I have recently taught at Mongolia at Huree University in the Multimedia department. And am looking forward for more teaching opportunities in the future.</p>
             <div class="more button">
 
             </div>
