--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ He will take great delight in you;
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/icon.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <script src=""></script>
 
@@ -45,9 +45,13 @@ He will take great delight in you;
             /*-webkit-filter: grayscale(50%);*/
             -webkit-filter: brightness(99%);
           }
+      img:hover{
+        -webkit-filter: brightness(50%);
+      }
       .btn {font-weight: bold;}
       #more { text-decoration: none; font-style: italic;}
       #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
+
     </style>
   </head>
   <body>
@@ -55,7 +59,7 @@ He will take great delight in you;
       <!--  HEADER -->
       <div class="container header" style="padding-top: 30px">
         <!--  TITLE BOX-->
-        <div class="row">
+        <div class="row" style="float:left; width: 325px">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:240px">
             <h1 style="margin-bottom:0px"><a id="title" href="index.html">BYUNNNN</a></h1>
@@ -83,7 +87,17 @@ He will take great delight in you;
             </ul>
           </div>
           <!-- <hr width="97%"> -->
-        </div> <!-- END OF TITLE BOX -->
+
+        </div> <!-- END OF TITLE BOX ROW -->
+        <div style="float:right;position:relative">
+          <ul class="soc">
+              <li><a class="soc-email2" href="mailto:byunkaram@gmail.com"></a></li>
+              <li><a class="soc-linkedin" href="http://www.linkedin.com/in/karambyun"></a></li>
+              <li><a class="soc-twitter" href="https://twitter.com/crzikrn/media"></a></li>
+              <li><a class="soc-github" href="https://github.com/crzikrn"></a></li>
+              <li><a class="soc-vimeo soc-icon-last" href="http://vimeo.com/crzikrn"></a></li>
+          </ul>
+        </div>
       </div>
 
       <!--  CONTENT MAIN PART -->
@@ -99,7 +113,22 @@ He will take great delight in you;
               <hr>
               <h3></h3>
             </div>
+
             <!-- ONE -->
+            <!-- project title -->
+            <h5><em><a class="link" href="digi.html">DIGITAL ANALOG REPRESENTATIONS OF US</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="digi.html"><img src="image/dian_03.png" class="img-responsive img-circle"></a>
+            </div>
+            <!-- description -->
+            <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate paintings in the style of expressionism. <span id="more"><a href="digi.html">More>></a></span></p>
+            <!-- button -->
+            <div class="more button"></div>
+
+            <br>
+            <hr>
+            <!-- TWO -->
             <!-- project title -->
             <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFFITI</a></em></h5>
             <!-- project image -->
@@ -111,19 +140,6 @@ He will take great delight in you;
             <!-- button -->
             <div class="more button"></div>
 
-            <br>
-            <hr>
-            <!-- TWO -->
-            <!-- project title -->
-            <h5><em><a class="link" href="digi.html">DIGITAL ANALOG REPRESENTATIONS OF US</a></em></h5>
-            <!-- project image -->
-            <div class="image">
-              <a href="digi.html"><img src="image/dian_03.png" class="img-responsive img-circle"></a>
-            </div>
-            <!-- description -->
-            <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate paintings in the style of expressionism. <span id="more"><a href="digi.html">More>></a></span></p>
-            <!-- button -->
-            <div class="more button"></div>
           </div>
 
           <!--  NEWS STRIP 2-->
