--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
             <!-- project image -->
             <div class="image"></div>
             <!-- project description -->
-            <p>I recently graduated as a master's candidate at ITP, NYU. My passions are closely tied with computational media effects on society, education and religion. I love to translate perspectives to the users language; to move them and lit their dormant passions.
+            <p>I recently graduated as a master's candidate at ITP, NYU. My passions are closely tied with computational media effects on society, education and religion. I love to translate perspectives to the users language; to move them and lit their dormant passions. I consider myself a digital media designer; detail-oriented visual designer and storyteller of raw human interactions. I am passionate to experiment with interactive platforms to communicate perspectives and culture.
             <br><br>
             On the side, I love programming languages and vector designs, and especially love to teach students. I have recently taught at Mongolia at Huree University in the Multimedia department. And am looking forward for more teaching opportunities in the future.</p>
             <div class="more button">
