--- a/data_analysis.html
+++ b/data_analysis.html
@@ -94,7 +94,7 @@
 
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/data_00.jpg" class="img-responsive img-circle"></a>
+              <a href=""><img src="image/data_0A.png" class="img-responsive img-circle"></a>
             </div>
             <!-- date description -->
             <p id="left-bar" style="font-family: 'Open Sans';">
