dangers of email

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ He will take great delight in you;
         </div> <!-- END OF TITLE BOX ROW -->
         <div style="float:right;position:relative">
           <ul class="soc">
-              <li><a class="soc-email2" href="mailto:byunkaram@gmail.com"></a></li>
+              <!-- <li><a class="soc-email2" href="mailto:byunkaram@gmail.com"></a></li> -->
               <li><a class="soc-linkedin" href="http://www.linkedin.com/in/karambyun"></a></li>
               <li><a class="soc-twitter" href="https://twitter.com/crzikrn/media"></a></li>
               <li><a class="soc-github" href="https://github.com/crzikrn"></a></li>
