--- a/archi.html
+++ b/archi.html
@@ -104,8 +104,8 @@
             2014</p>
 
             <div style="text-align: center;">
-              <a href="" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="index.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="digi.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
