--- a/data_analysis.html
+++ b/data_analysis.html
@@ -104,8 +104,8 @@
             2014</p>
 
             <div style="text-align: center;">
-              <a href="" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="divine.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="carni.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
