--- a/divine.html
+++ b/divine.html
@@ -104,8 +104,8 @@
             2012</p>
 
             <div style="text-align: center;">
-              <a href="" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="typo.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="data_analysis.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
