--- a/typo.html
+++ b/typo.html
@@ -105,8 +105,8 @@
             2010-2015</p>
 
             <div style="text-align: center;">
-              <a href="" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="digi.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="divine.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
