--- a/digi.html
+++ b/digi.html
@@ -104,8 +104,8 @@
             2013</p>
 
             <div style="text-align: center;">
-              <a href="" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
-              <a href="" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
+              <a href="archi.html" class="glyphicon glyphicon-chevron-left" aria-hidden></a>
+              <a href="typo.html" class="glyphicon glyphicon-chevron-right" aria-hidden></a>
             </div>
 
           </div>
