--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ He will take great delight in you;
         -webkit-filter: brightness(50%);
       }
       .btn {font-weight: bold;}
-      #more { text-decoration: none; font-style: italic;}
+      #more { text-decoration: none; font-weight: bold;}
       #more:hover {text-decoration: none; border-bottom: 1px solid #000;}
 
     </style>
@@ -115,6 +115,23 @@ He will take great delight in you;
             </div>
             <!-- ONE -->
             <!-- project title -->
+            <h5><em><a class="link" href="hamlet.html">HAMLET, TEXT ANALYSIS</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="hamlet.html"><img src="image/hamlet_00.png" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
+            </div>
+            <!-- description -->
+            <p>Understanding of the words Shakepeare uses. Hamlet text analysis to understand Shakespeare's creativity.<span id="more"><a href="divine.html"> More>></a></span></p>
+            <!-- button -->
+            <div class="more button">
+
+            </div>
+            <!-- break -->
+            <br>
+            <hr>
+            <!-- TWO -->
+            <!-- project title -->
             <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFFITI</a></em></h5>
             <!-- project image -->
             <div class="image">
@@ -127,7 +144,7 @@ He will take great delight in you;
 
             <br>
             <hr>
-            <!-- TWO -->
+            <!-- THREE -->
             <!-- project title -->
             <h5><em><a class="link" href="digi.html">DIGITAL ANALOG REPRESENTATIONS OF US</a></em></h5>
             <!-- project image -->
@@ -218,30 +235,32 @@ He will take great delight in you;
             </div>
           </div>
 
-          <!--  VIMEO MEDIAFEED -->
+          <!--  NEWS STRIP 4 -->
           <div class="col-sm-3 hidden-md col-lg-3 col-xs-12">
-            <div class="title@crzikrn">
-              <h4>MEDIA ARCHIVE @CRIZKRN</h4>
+            <!-- category title -->
+            <div class="category title">
+              <h4>MULTIMEDIA</h4>
               <hr>
               <h3></h3>
             </div>
-            <!-- VIDEO EMBED ONE & TWO -->
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/93921664?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <!-- ONE -->
+            <!-- project title -->
+            <h5><em><a class="link" href="hamlet.html">MEDIA TEST LAB</a></em></h5>
+            <!-- project image -->
+            <div class="image">
+              <a href="hamlet.html"><img src="image/lab_00.png" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/79065095?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <!-- description -->
+            <p>Collection of video test uploads in coding.<span id="more"><a href="divine.html"> More>></a></span></p>
+            <!-- button -->
+            <div class="more button">
+
             </div>
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/77011929?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/76240312?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0" width="480" height="281" frameborder="0" title="Stuff that Sounds like Autumn" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
-            <!-- SCRIPT FOR ALTERNATING VIMEO API -->
-            <script>
-            </script>
-          </div>
+            <!-- break -->
+            <br>
+            <hr>
+
 
         </div> <!--  END OF PORTFOLIO ROW-->
       </div> <!--  END OF CONTENT MAIN PART -->
@@ -253,7 +272,7 @@ He will take great delight in you;
         </div>
         <!-- COPYRIGHT PHRASE -->
         <div class="copyright" style="margin:30px 0px 40px 0px">
-          <p> ©2015 Karam Byun </p>
+          <p> ©2016 Karam Byun </p>
         </div>
       </div>
     </div>
