--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ He will take great delight in you;
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/icon.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-    <script src=""></script>
+    <script src="js/p5.min.js"></script>
 
     <title>BYUNNNN</title>
     <!-- ADDING CUSTOM CSS STYLE -->
@@ -245,14 +245,14 @@ He will take great delight in you;
             </div>
             <!-- ONE -->
             <!-- project title -->
-            <h5><em><a class="link" href="hamlet.html">MEDIA TEST LAB</a></em></h5>
+            <h5><em><a class="link" href="http://www.vimeo.com/crzikrn">MEDIA TEST LAB</a></em></h5>
             <!-- project image -->
             <div class="image">
-              <a href="hamlet.html"><img src="image/lab_00.png" class="img-responsive img-circle"></a>
+              <a href="http://www.vimeo.com/crzikrn"><img src="image/lab_00.png" class="img-responsive img-circle"></a>
               <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
             <!-- description -->
-            <p>Collection of video test uploads in coding.<span id="more"><a href="divine.html"> More>></a></span></p>
+            <p>Collection of video test uploads in coding.<span id="more"><a href="http://www.vimeo.com/crzikrn"> More>></a></span></p>
             <!-- button -->
             <div class="more button">
 
