--- a/hamlet.html
+++ b/hamlet.html
@@ -148,6 +148,8 @@
               <div class="col-md-12">
                 <a href="image/hamlet_01.png" data-lightbox="graf-box"><img src="image/hamlet_01.png" class="img-responsive"></a>
 
+                <div id="text"></div>
+
               </div>
             </div>
             <!-- project description -->
