--- a/hamlet.html
+++ b/hamlet.html
@@ -47,13 +47,13 @@
     <style>
 
       body{
-        padding: 20px;
+        padding: 0;
         margin:0;
       }
       #text {
        border-style: solid;
        border-width: 1px;
-       padding: 20px;
+       padding: 0px;
       }
 
     </style>
