--- a/hamlet.html
+++ b/hamlet.html
@@ -52,8 +52,8 @@
       }
       #text {
        border-style: solid;
-       border-width: 1px;
-       padding: 20px;
+       border-width: 0px;
+       padding: 0px;
       }
 
     </style>
@@ -146,13 +146,14 @@
             <!-- project image -->
             <div class="image">
               <div class="col-md-12">
-                <a href="image/hamlet_01.png" data-lightbox="graf-box"><img src="image/hamlet_01.png" class="img-responsive"></a>
+                <!-- <a href="image/hamlet_01.png" data-lightbox="graf-box"><img src="image/hamlet_01.png" class="img-responsive"></a> -->
 
 
 
               </div>
             </div>
             <!-- project description -->
+            <p> Drag the mouse to change size of ellipse </p>
             <div id="text"></div>
             <!-- <div id="text"> container for p5</div> -->
 
