--- a/hamlet.html
+++ b/hamlet.html
@@ -148,13 +148,14 @@
               <div class="col-md-12">
                 <!-- <a href="image/hamlet_01.png" data-lightbox="graf-box"><img src="image/hamlet_01.png" class="img-responsive"></a> -->
 
-
-
               </div>
             </div>
             <!-- project description -->
             <p> Drag the mouse to change size of ellipse </p>
             <div id="text"></div>
+            <br>
+            <p><em>List of words</em></p>
+            <p id="token"></p>
             <!-- <div id="text"> container for p5</div> -->
 
             </div>
