--- a/hamlet.html
+++ b/hamlet.html
@@ -154,7 +154,7 @@
             <p> Drag the mouse to change size of ellipse </p>
             <div id="text"></div>
             <br>
-            <p><em>List of words</em></p>
+            <p><em>List of first 20 words</em></p>
             <p id="token"></p>
             <!-- <div id="text"> container for p5</div> -->
 
