--- a/hamlet.html
+++ b/hamlet.html
@@ -155,7 +155,7 @@
             <div id="text"></div>
             <br>
             <p><em>List of first 20 words</em></p>
-            <p id="token"></p>
+            <div id="token"></div>
             <!-- <div id="text"> container for p5</div> -->
 
             </div>
