--- a/hamlet.html
+++ b/hamlet.html
@@ -147,16 +147,15 @@
             <div class="image">
               <div class="col-md-12">
                 <!-- <a href="image/hamlet_01.png" data-lightbox="graf-box"><img src="image/hamlet_01.png" class="img-responsive"></a> -->
-                <p> Drag the mouse to change size of ellipse </p>
-                <div id="text"></div>
-                <br>
-                <p><em>List of first 20 words</em></p>
-                <div id="token"></div>
-                
+
               </div>
             </div>
             <!-- project description -->
-
+            <h5><em> Drag the mouse to change size of ellipse.</em></h5>
+            <div id="text"></div>
+            <br>
+            <p><em>List of first 12 words</em></p>
+            <div id="token"></div>
             <!-- <div id="text"> container for p5</div> -->
 
             </div>
